@@ -32,7 +32,7 @@
  * TODO: Password manager GUI (here?) (in dialogs.c, of course --pasky). */
 
 
-static struct option_info forms_history_options[] = {
+static union option_info forms_history_options[] = {
 	INIT_OPT_BOOL("document.browse.forms", N_("Show form history dialog"),
 		"show_formhist", 0, 0,
 		N_("Ask if a login form should be saved to file or not. "
